--- a/main.css
+++ b/main.css
@@ -14,23 +14,86 @@ body{
 }
 
 *{box-sizing:border-box}
-html,body{height:100%;margin:0;background:var(--bg);font-family:Inter, system-ui, Arial, Helvetica, sans-serif;color:var(--text)}
-main{position: relative;display:flex;align-items:center;justify-content:center;height:100%;flex-direction:column;padding:20px}
+
+html,body{
+  height:100%;
+  margin:0;
+  background:var(--bg);
+  font-family:Inter, system-ui, Arial, Helvetica, sans-serif;
+  color:var(--text)
+}
+
+main{
+  position: relative;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  height:100%;
+  flex-direction:column;
+  padding:20px
+}
 
 /* Welcome */
-#welcome{display:flex;flex-direction:column;align-items:center;gap:18px}
-button{cursor:pointer;padding:10px 18px;border-radius:8px;border:0;background:var(--accent);color:white;font-weight:700}
-button:active{transform:translateY(1px)}
+#welcome{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  gap:18px
+}
+
+button{
+  justify-content: center; 
+  align-items: center;  
+  cursor:pointer;
+  padding:10px 18px;
+  border-radius:8px;
+  border:0;
+  background:var(--accent);
+  color:white;
+  font-weight:700
+}
+
+button:active{
+  transform:translateY(1px)
+}
 
 /* Heart section */
-.hidden{display:none}
-#uiTop{display:flex;gap:10px;align-items:center;margin-bottom:10px}
-#nameInput{padding:8px 10px;border-radius:6px;border:1px solid rgba(255,255,255,0.08);width:220px}
-#stage{border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,0.6);background:transparent;display:block}
+.hidden{
+  display:none
+}
+
+#uiTop{
+  display:flex;
+  gap:10px;
+  align-items:center;
+  margin-bottom:10px
+}
+
+#nameInput{
+  padding:8px 10px;
+  border-radius:6px;
+  border:1px solid rgba(255,255,255,0.08);
+  width:220px
+}
+
+#stage{
+  border-radius:12px;
+  box-shadow:0 10px 30px rgba(0,0,0,0.6);
+  background:transparent;
+  display:block
+}
 
 /* Controls */
-#controls{margin-top:10px;color:#ddd;display:flex;gap:12px;align-items:center}
-label{font-size:13px}
+#controls{
+  margin-top:10px;
+  color:#ddd;
+  display:flex;
+  gap:12px;
+  align-items:center
+}
+
+label{
+  font-size:13px}
 input[type=range]{vertical-align:middle}
 
 
@@ -88,3 +151,4 @@ input[type=range]{vertical-align:middle}
   background-repeat: no-repeat;
   background-size: cover;
 }
+
