--- a/main.css
+++ b/main.css
@@ -152,3 +152,65 @@ input[type=range]{vertical-align:middle}
   background-size: cover;
 }
 
+/* Estrella fugaz */
+.cometa {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 2px;
+  height: 2px;
+  background: radial-gradient(circle, white, transparent);
+  border-radius: 50%;
+  box-shadow: 0 0 8px #00b3ff;
+  opacity: 0;
+  pointer-events: none;
+  z-index: 1000;
+  transform: translate(0,0);
+  transition: transform 5s linear, opacity 1s linear;
+}
+
+
+@keyframes cometaAnim {
+  0% {
+    transform: translate(0, 0) rotate(-30deg);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(300px, 300px) rotate(-30deg);
+    opacity: 0;
+  }
+}
+
+.planeta {
+  position: fixed;
+  width: 90px;   /* Ajusta tamaño para celular */
+  height: 90px;
+  pointer-events: none;
+  z-index: 0;
+}
+
+/* Animaciones */
+#planeta1 {
+  top: 50%;
+  left: 10%;
+  animation: flotar1 20s linear infinite;
+}
+
+#planeta2 {
+  top: 20%;
+  left: 80%;
+  animation: flotar2 25s linear infinite;
+}
+
+/* Movimiento suave arriba-abajo */
+@keyframes flotar1 {
+  0% { transform: translateY(0px); }
+  50% { transform: translateY(15px); }
+  100% { transform: translateY(0px); }
+}
+
+@keyframes flotar2 {
+  0% { transform: translateY(0px); }
+  50% { transform: translateY(-12px); }
+  100% { transform: translateY(0px); }
+}
