--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ body{
 html,body{
   height:100%;
   margin:0;
-  background:var(--bg);
+  background:transparent;
   font-family:Inter, system-ui, Arial, Helvetica, sans-serif;
   color:var(--text)
 }
